objects/Contract_Resource_Type__c/Contract_Resource_Type__c.object-meta.xml
<CustomObject>
    <label>Contract Resource Type</label>
    <nameField>
        <displayFormat>CRT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Resource Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>