objects/Contract_Resource_Type__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Resource Types</relationshipLabel>
    <relationshipName>Contract_Resource_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>