objects/Contract_Resource_Type__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Contract Resource Types</relationshipLabel>
    <relationshipName>Contract_Resource_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>